[package]
name = "collector"
version = "0.1.0"
authors = ["Rexagon <reide740@gmail.com>"]
edition = "2018"

[lib]
name = "collector_lib"

[dependencies]
clap = "3.0.0-beta.2"
ed25519-dalek = "1.0"
failure = "0.1"
hex = "0.4"
base64 = "0.13"
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
